[project]
name = "mitre-attack-kg"
version = "1.0.0"
description = "Convert MITRE ATT&CK, CAPEC, and CWE data into SPO knowledge-graph triples (Parquet)"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Sougata Bhattacharya" }]
dependencies = [
    "mitreattack-python>=5.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
    "datasets>=2.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access (downloads real ATT&CK data)",
]
testpaths = ["tests"]
